--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -191,6 +191,7 @@ set(viewer_SOURCE_FILES
     llfloatersnapshot.cpp
     llfloaterstats.cpp
     llfloatertelehub.cpp
+    llfloaterteleport.cpp
     llfloatertest.cpp
     llfloatertools.cpp
     llfloatertopobjects.cpp
@@ -602,6 +603,7 @@ set(viewer_HEADER_FILES
     llfloatersnapshot.h
     llfloaterstats.h
     llfloatertelehub.h
+    llfloaterteleport.h
     llfloatertest.h
     llfloatertools.h
     llfloatertopobjects.h
@@ -1150,6 +1152,7 @@ set(viewer_XUI_FILES
     skins/default/xui/en-us/floater_sound_preview.xml
     skins/default/xui/en-us/floater_statistics.xml
     skins/default/xui/en-us/floater_telehub.xml
+    skins/default/xui/en-us/floater_teleport.xml
     skins/default/xui/en-us/floater_test.xml
     skins/default/xui/en-us/floater_texture_ctrl.xml
     skins/default/xui/en-us/floater_tools.xml
