--- a/indra/newview/res/viewerRes.rc
+++ b/indra/newview/res/viewerRes.rc
@@ -155,12 +155,12 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "CompanyName", "Linden Lab"
-            VALUE "FileDescription", "Second Life"
+            VALUE "FileDescription", "Snowglobe"
             VALUE "FileVersion", "1.2.1.0"
             VALUE "InternalName", "Second Life"
-            VALUE "LegalCopyright", "Copyright © 2001-2008, Linden Research, Inc."
-            VALUE "OriginalFilename", "SecondLife.exe"
-            VALUE "ProductName", "Second Life"
+            VALUE "LegalCopyright", "Copyright © 2001-2009, Linden Research, Inc."
+            VALUE "OriginalFilename", "Snowglobe.exe"
+            VALUE "ProductName", "Snowglobe"
             VALUE "ProductVersion", "1.2.1.0"
         END
     END
