--- a/indra/llmessage/CMakeLists.txt
+++ b/indra/llmessage/CMakeLists.txt
@@ -96,6 +96,7 @@ set(llmessage_SOURCE_FILES
     patch_code.cpp
     patch_dct.cpp
     patch_idct.cpp
+    llsocks5.cpp
     )
 
 set(llmessage_HEADER_FILES
@@ -193,6 +194,7 @@ set(llmessage_HEADER_FILES
     patch_code.h
     patch_dct.h
     sound_ids.h
+    llsocks5.h
     )
 
 set_source_files_properties(${llmessage_HEADER_FILES}
