SNOW-362 build error: 'skip' is not a member of 'tut::test_result'

--- a/indra/llimage/CMakeLists.txt
+++ b/indra/llimage/CMakeLists.txt
@@ -60,4 +60,6 @@ target_link_libraries(
     )
 
 # Add tests
-ADD_BUILD_TEST(llimageworker llimage)
+if (NOT STANDALONE)
+	ADD_BUILD_TEST(llimageworker llimage)
+endif (NOT STANDALONE)
