--- a/indra/llcommon/CMakeLists.txt
+++ b/indra/llcommon/CMakeLists.txt
@@ -205,3 +205,13 @@ target_link_libraries(
     ${ZLIB_LIBRARIES}
 	${WINDOWS_LIBRARIES}
     )
+
+if (DARWIN)
+    # Don't embed a full path in the library's install name
+    set_target_properties(
+        llcommon
+        PROPERTIES
+        BUILD_WITH_INSTALL_RPATH 1
+        INSTALL_NAME_DIR "@executable_path/../Resources"
+      )
+endif (DARWIN)
