--- a/indra/cmake/.svnignore
+++ b/indra/cmake/.svnignore
@@ -4,11 +4,7 @@
 #   svn propset svn:ignore -F .svnignore .
 #
 
-build-*
-viewer-linux-*
-.distcc
-
 #
 #
 # Installed by SNOW-173 patch
-cwdebug
+Cwdebug.cmake
