--- a/indra/llmessage/CMakeLists.txt
+++ b/indra/llmessage/CMakeLists.txt
@@ -214,13 +214,8 @@ target_link_libraries(
     )
 
 IF (LL_TESTS)
-  IF (NOT LINUX OR NOT VIEWER)
-    # When building the viewer the tests links against the shared objects. 
-    # These can not be found when we try to run the tests, so we had to disable them, for the viewer build.
-    # TODO: Can someone with viewer knowledge figure out how to make these find the correct so.
-    #ADD_BUILD_TEST(llhttpclientadapter llmessage)
-    ADD_BUILD_TEST(lltrustedmessageservice llmessage)
-    ADD_BUILD_TEST(lltemplatemessagedispatcher llmessage)
-  ENDIF ()
-ENDIF ()
+  ADD_BUILD_TEST(llhttpclientadapter llmessage)
+  ADD_BUILD_TEST(lltrustedmessageservice llmessage)
+  ADD_BUILD_TEST(lltemplatemessagedispatcher llmessage)
+ENDIF (LL_TESTS)
 
